// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VisibleRender /> with all options Observer rendering in view render matches its snapshot 1`] = `
<span>
  IN VIEW
</span>
`;

exports[`<VisibleRender /> with all options Observer rendering out of view render matches its snapshot 1`] = `
<span>
  OUT OF VIEW
</span>
`;

exports[`<VisibleRender /> with all options matches its snapshot 1`] = `
<Observer
  onChange={[Function]}
  render={[Function]}
  rootMargin="100px"
  tag="span"
  threshold={0}
  triggerOnce={false}
/>
`;

exports[`<VisibleRender /> with minimal options matches its snapshot 1`] = `
<Observer
  onChange={[Function]}
  render={[Function]}
  tag="div"
  threshold={0}
  triggerOnce={false}
/>
`;

exports[`<VisibleRender /> with minimal options renders empty content 1`] = `null`;
